--- a/templates/visit.html
+++ b/templates/visit.html
@@ -19,9 +19,11 @@
         <div class = "row">
 
             <div class = "column" style='float:left; width:10%'>
+                <!--
                 <div class = "box" id = "1">
                     <span style="font-size:20px;cursor:pointer;">Buildings</span>
                 </div>
+                -->
                 <div class = "box" id = "2">
                     <span style="font-size:20px;cursor:pointer;" >Friend Search</span>
                 </div>
@@ -32,7 +34,7 @@
 
             <div  class = "column" id = "gameArea" style='float:left; width:75%; margin-left:40px'>               
                 <div id="click-object">                    
-                    <img src="{{ template }}" id = "click-button" onclick="inc()" alt="click object" height="256em" width="256em">
+                    <img src="{{ template }}" id = "click-button" alt="click object" height="256em" width="256em">
                     <img src="{{ image }}" id = "user-image" height="256em" width="256em"> 
                 </div>
             </div>
