--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 
-{% extends '_base.html' %}
+{% extends '_index.html' %}
 {% block content %}
 <div id='content'>
     <div class = "outer" id = 'outer'>    
