bug with no friends

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -29,7 +29,7 @@
 
     <br>
     <br>
-    {% if user is defined %}    
+    {% if user is defined and friend_list != []%}    
     <p>See how your friends are doing. Click their username to visit their page!</p>
         <table>
         <tr>
